@@ -1,3 +1,10 @@
+2008-05-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c:
+	* src/baobab-scan.c:
+	* src/baobab-utils.c:
+	Some leak fixes and cleanups by Cosimo Cecchi.
+
 2008-05-02  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-scan.c: pass in the GFileInfo to the recursive loop
